2002-10-26  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/Minolta-PCL600.xml: Added PJL option to activate
	  the 600-dpi mode of the Minolta PagePro 8L.

	* db/source/printer/*: Text improvements of the Minolta printer
	  entries, upgraded the Minolta PagePro 8L from "Partially" to
	  "Perfectly".
	
2002-10-24  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/HP-OfficeJet_R40.xml: Added the HP OfficeJet
	  R40.

2002-10-23  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/183.xml: Fixed default of "Binding" PJL option. it
	  must be "Long Edge" and not "Short Edge".

2002-10-23  Tim Waugh  <twaugh@redhat.com>

	* db/source/printer/175232.xml, db/source/printer/530418.xml,
	  db/source/printer/60928.xml, db/source/printer/620306.xml,
	  db/source/printer/63040.xml, db/source/printer/635698.xml,
	  db/source/printer/64576.xml, db/source/printer/72000.xml,
	  db/source/printer/99616.xml,
	  db/source/printer/HP-DeskJet_630C.xml,
	  db/source/printer/HP-DeskJet_825C.xml,
	  db/source/printer/HP-PhotoSmart_P100.xml: Added autodetection
	  entries from the hpijs driver (models.cpp).

2002-10-22  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/63.xml: Fixed default value ID.

2002-10-19  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/driver/*: Replaced "-dSAFER" by "-dPARANOIDSAFER" in the
	  GhostScript command lines. This prevents the PostScript code of
	  print job from reading arbitrary files.

	* db/source/opt/126.xml: Custom paper size support for most dot
	  matrix printers.

2002-10-10  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Set revision number of all files to 3.0.
	
2002-10-09  Till Kamppeter <till.kamppeter@gmx.net>

	* README, USAGE: Updated documentation according to the splitted
	  packages.
	
2002-10-08  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Splitted Foomatic into four packages:
	
	  - foomatic-filters: Filter scripts used by the spoolers to