@@ -1,6 +1,6 @@
 <driver id="driver/lm1100">
  <name>lm1100</name>
- <url>http://www.burntcouch.com/lexmark/</url>
+ <url>http://www.linuxprinting.org/download/printing/lm1100/</url>
  <execution>
   <filter />
   <prototype>gs -q -sDEVICE=ppmraw -r300 %A -dBATCH -dNOPAUSE -dPARANOIDSAFER %Z -sOutputFile=- - | lm1100 %B -</prototype>
@@ -10,7 +10,10 @@
 
     Tim Engler's Lexmark 1100 driver, released March 2000. Tim does
     not continue the development any more, someone overtaking the
-    project is welcome.&lt;p&gt;
+    project is welcome. The original web site,
+    &lt;tt&gt;http://www.burntcouch.com/lexmark/&lt;/tt&gt; is not
+    available anymore, but the driver can be downloaded here from
+    linuxprinting.org&lt;p&gt;
 
     &lt;i&gt;Important:&lt;/i&gt; If you use gcc 3.1 or later for
     compiling this driver you should apply a little correction by
