@@ -1,3 +1,8 @@
+2002-10-30  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/driver/lm1100.xml: URL and text updated (driver
+	  re-hosted on linuxprinting.org).
+	
 2002-10-26  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/opt/Minolta-PCL600.xml: Added PJL option to activate
